Add some functionaly

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
     </div>
     <!-- chef choice -->
-    <div class="chefChoice">
+    <!-- <div class="chefChoice">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 pl-0 section3product">
@@ -197,6 +197,66 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- form -->
+    <div class="formSection">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1>add dishes</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <form>
+                        <div class="form-group">
+                          <label for="enterDish">Enter Dish</label>
+                          <input type="text" class="form-control" id="enterDish" placeholder="Enter Dishes">
+                        </div>
+                        <div class="form-group">
+                          <label for="imgLink">Image Link</label>
+                          <input type="text" class="form-control" id="imgLink" placeholder="Password">
+                        </div>
+                        <!-- start -->
+                        <div class="input-group mb-3">
+                          <div class="input-group">
+                            <input type="text" class="form-control" id="ingredients" aria-label="Text input with dropdown button" placeholder="Enter Ingredients">
+                            <div class="input-group-append">
+                              <button class="btn submitBtn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
+                              <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Kg</a>
+                                <a class="dropdown-item" href="#">Gm</a>
+                                <a class="dropdown-item" href="#">Cup</a>
+                                <a class="dropdown-item" href="#">Spoon</a>
+                                <a class="dropdown-item" href="#">glass</a>
+                                <!-- class="dropdown-divider" -->
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                          <!-- end -->
+                        <button type="submit" class="btn submitBtn mt-3">Submit</button>
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <form>
+                        <div class="form-group">
+                          <label for="selectedItem">Selected Item</label>
+                          <input type="text" class="form-control" id="selectedItem">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">Password</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
                 </div>
             </div>
         </div>
