add Dish page done

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                           <a class="nav-link text-light" href="#">about</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="#">reservation</a>
+                            <a class="nav-link text-light" href="./addDish.html">add dish</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link text-light" href="#">manu</a>
@@ -201,72 +201,13 @@
             </div>
         </div>
     </div> -->
-    <!-- form -->
-    <div class="formSection">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1>add dishes</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <form>
-                        <div class="form-group">
-                          <label for="enterDish">Enter Dish</label>
-                          <input type="text" class="form-control" id="enterDish" placeholder="Enter Dishes">
-                        </div>
-                        <div class="form-group">
-                          <label for="imgLink">Image Link</label>
-                          <input type="text" class="form-control" id="imgLink" placeholder="Password">
-                        </div>
-                        <!-- start -->
-                        <div class="input-group mb-3">
-                          <div class="input-group">
-                            <input type="text" class="form-control" id="ingredients" aria-label="Text input with dropdown button" placeholder="Enter Ingredients">
-                            <div class="input-group-append">
-                              <button class="btn submitBtn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
-                              <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Kg</a>
-                                <a class="dropdown-item" href="#">Gm</a>
-                                <a class="dropdown-item" href="#">Cup</a>
-                                <a class="dropdown-item" href="#">Spoon</a>
-                                <a class="dropdown-item" href="#">glass</a>
-                                <!-- class="dropdown-divider" -->
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                          <!-- end -->
-                        <button type="submit" class="btn submitBtn mt-3">Submit</button>
-                    </form>
-                </div>
-                <div class="col-md-6">
-                    <form>
-                        <div class="form-group">
-                          <label for="selectedItem">Selected Item</label>
-                          <input type="text" class="form-control" id="selectedItem">
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleInputPassword1">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                        </div>
-                        <div class="form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                      </form>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- extra jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/slick.min.js"></script>
+    <script src="./js/script.js"></script>
     <script>
         $('.div_slider').slick({
         infinite: true,
