--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
     </div>
     <!-- chef choice -->
-    <!-- <div class="chefChoice">
+    <div class="chefChoice">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 pl-0 section3product">
@@ -200,7 +200,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- extra jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
