--- a/addDish.html
+++ b/addDish.html
@@ -86,7 +86,27 @@
                           <input type="text" class="form-control" id="selectedItem" placeholder="Selected Items" disabled>
                         </div>
                         <label for="showIngredients">Show Ingredients</label>
-                        <div class="divArea" id="showIngredients"></div>
+                        <div class="divArea" id="showIngredients">
+                          <!-- tabele -->
+                        <div class="ingreTable">
+                          <table class="table text-dark table-hover text-center">
+                            <thead>
+                              <tr>
+                                <th scope="col">Ingredient Name</th>
+                                <th scope="col">Quantity</th>
+                                <th scope="col">Unit</th>
+                              </tr>
+                            </thead> <!--<th scope="row">1</th>-->
+                            <tbody id="showDataIngredients">
+                              <tr>
+                                <th scope="row">Ashish</th>
+                                <td>3</td>
+                                <td>Cup</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                      </div>
+                        </div>
                         <!-- <button type="submit" class="btn submitBtn">Submit</button> -->
                       </form>
                 </div>
