All entry added

--- a/addDish.html
+++ b/addDish.html
@@ -22,7 +22,7 @@
     <!-- custom css file -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body class="addDishBody">
     <!-- form -->
     <div class="formSection">
         <div class="container">
