--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="container">
                 <img src="./images/slider2-icon.png" alt="slider_icon">
                 <div>
-                    <h1>ashish restaurant</h1>
+                    <h1>deadpool restaurant</h1>
                 <h2><span>tasty</span>.<span>delicious</span>.<span>savoury</span></h2>
                 </div>
             </div>
