All pages done expect delete and edit

--- a/addDish.html
+++ b/addDish.html
@@ -22,7 +22,7 @@
     <!-- custom css file -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body class="addBG">
     <!-- form -->
     <div class="formSection">
         <div class="container">
@@ -104,9 +104,13 @@
                           </table>
                       </div>
                         </div>
-                        <!-- <button type="submit" class="btn submitBtn">Submit</button> -->
                       </form>
                 </div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-12">
+                <a href="./getAllDishes.html"><button class="btn btn-block submitBtn">Get All Dishes</button></a>
+              </div>
             </div>
         </div>
     </div>
