--- a/addDish.html
+++ b/addDish.html
@@ -33,7 +33,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <form action="">
+                    <form class="formClass" action="" >
                       <!-- enter ingredients *****************************************-->
                       <div class="form-group">
                         <label for="ingredients">Enter Ingredients</label>
@@ -63,7 +63,7 @@
                       <small id="uniterr" class="form-text text-light ingreErr"></small>
                       <button type="submit" id="addIngredientsData" class="btn submitBtn mt-3 btn-block">Add Ingredients</button>
                     </form>
-                    <form class="mt-3">
+                    <form class="mt-3 formClass">
                       <!-- enter dish -->
                         <div class="form-group">
                           <label for="enterDish">Enter Dish</label>
@@ -80,7 +80,7 @@
                     </form>
                 </div>
                 <div class="col-md-6">
-                    <form>
+                    <form class="formClass">
                         <div class="form-group">
                           <label for="selectedItem">Your Dish</label>
                           <input type="text" class="form-control" id="selectedItem" placeholder="Your Dish" disabled>
