--- a/getAllDishes.html
+++ b/getAllDishes.html
@@ -52,9 +52,9 @@
                         <thead>
                           <tr>
                             <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Ingredient Name</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Unit</th>
                             <th scope="col">Edit</th>
                             <th scope="col">Delete</th>
                           </tr>
@@ -62,9 +62,9 @@
                         <tbody>
                           <tr>
                             <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td>Ashish</td>
+                            <td>Kumar</td>
+                            <td>Ratewal</td>
                             <td><button class="btn btn-success">Edit</button></td>
                             <td><button class="btn btn-danger">Delete</button></td>
                           </tr>
