done expect delete and update

--- a/addDish.html
+++ b/addDish.html
@@ -92,9 +92,9 @@
                           <table class="table text-dark table-hover text-center">
                             <thead>
                               <tr>
-                                <th scope="col">Ingredient Name</th>
+                                <th scope="col">#</th>
+                                <th scope="col">Name</th>
                                 <th scope="col">Quantity</th>
-                                <th scope="col">Unit</th>
                                 <th scope="col">Edit</th>
                                 <th scope="col">Delete</th>
                               </tr>
@@ -109,7 +109,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-12">
-                <a href="./getAllDishes.html"><button class="btn btn-block submitBtn">Get All Dishes</button></a>
+                <a href="./getAllDishes.html"><button class="btn btn-block submitBtn" id="getAllDishes">Get All Dishes</button></a>
               </div>
             </div>
         </div>
