--- a/getAllDishes.html
+++ b/getAllDishes.html
@@ -52,9 +52,9 @@
                         <thead>
                           <tr>
                             <th scope="col">#</th>
-                            <th scope="col">Ingredient Name</th>
-                            <th scope="col">Quantity</th>
-                            <th scope="col">Unit</th>
+                            <th scope="col">Dish Name</th>
+                            <th scope="col">Image Link</th>
+                            <th scope="col">Ingredients</th>
                             <th scope="col">Edit</th>
                             <th scope="col">Delete</th>
                           </tr>
