--- a/index.html
+++ b/index.html
@@ -201,6 +201,74 @@
             </div>
         </div>
     </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h4 class="text-center text-white">Food</h4>
+                    <div class="row no-gutters">
+                        <div class="col-md-6">
+                            <img src="./images/1.jpg" class="w-100" alt="1">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/2.jpg" class="w-100" alt="2">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/3.jpg" class="w-100" alt="3">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/4.jpg" class="w-100" alt="4">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h4 class="text-center text-white">Food</h4>
+                    <div class="row no-gutters">
+                        <div class="col-md-6">
+                            <img src="./images/1.jpg" class="w-100" alt="1">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/2.jpg" class="w-100" alt="2">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/3.jpg" class="w-100" alt="3">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/4.jpg" class="w-100" alt="4">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h4 class="text-center text-white">Food</h4>
+                    <div class="row no-gutters">
+                        <div class="col-md-6">
+                            <img src="./images/1.jpg" class="w-100" alt="1">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/2.jpg" class="w-100" alt="2">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/3.jpg" class="w-100" alt="3">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="./images/4.jpg" class="w-100" alt="4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer copyright -->
+    <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <p class="mb-0 text-center text-white">@copyright &copy; 2021 All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- extra jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
