--- a/addDish.html
+++ b/addDish.html
@@ -159,6 +159,9 @@
                     </table>
                 </div>
             </div>
+            <div class="row">
+              <button class="btn btn-block" onclick="clearAllData()">Clear All Data</button>
+            </div>
         </div>
       </div>
     </div>
