Scroll issue resolved

--- a/addDish.html
+++ b/addDish.html
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 overFlow">
                     <table class="table table-hover table-dark">
                         <thead>
                           <tr>
