--- a/addDish.html
+++ b/addDish.html
@@ -84,6 +84,7 @@
                           <small id="imgerr" class="form-text text-light err"></small>
                         </div>
                         <button type="submit" id="addDishData" onclick="finalSubmit()" class="btn submitBtn btn-block">Finall Submit</button>
+                        <button type="submit" style="display: none;" id="updateDishData" class="btn submitBtn btn-block">Update</button>
                     </form>
                 </div>
                 <div class="col-md-6">
@@ -149,7 +150,7 @@
             </div>
             <div class="row">
                 <div class="col-12 overFlow">
-                    <table class="table table-hover table-dark text-center">
+                    <table class="table table-hover table-dark">
                         <thead>
                           <tr>
                             <th scope="col">#</th>
@@ -166,7 +167,9 @@
                 </div>
             </div>
             <div class="row">
-              <button class="btn btn-block" onclick="clearAllData()">Clear All Data</button>
+              <div class="col-12">
+                <button class="btn btn-block" onclick="clearAllData()">Clear All Data</button>
+              </div>
             </div>
         </div>
       </div>
