--- a/addDish.html
+++ b/addDish.html
@@ -63,6 +63,7 @@
                       </div>
                       <small id="uniterr" class="form-text text-light ingreErr"></small>
                       <button type="submit" id="addIngredientsData" onclick="getIngre()" class="btn submitBtn mt-3 btn-block">Add Ingredients</button>
+                      <button type="submit" style="display: none;" id="addmoreIngre" class="btn submitBtn mt-3 btn-block">Add More</button>
                       <button type="submit" style="display: none;" id="updateIngre" class="btn submitBtn mt-3 btn-block">Update</button>
                       <button type="submit" style="display: none;" id="finalUpdateIngre" class="btn submitBtn mt-3 btn-block">Update</button>
                     </form>
