--- a/addDish.html
+++ b/addDish.html
@@ -54,8 +54,10 @@
                         </div>
                         <select class="custom-select" id="units" aria-describedby="uniterr">
                           <option selected disabled value="">Units</option>
-                          <option value="kg">kg</option>
-                          <option value="l">l</option>
+                          <option value="kilogram">kilgram</option>
+                          <option value="Peice">Peice</option>
+                          <option value="gram">gram</option>
+                          <option value="liter">liter</option>
                           <option value="cup">Cup</option>
                           <option value="glass">Glass</option>
                           <option value="Spoon">Spoon</option>
