--- a/addDish.html
+++ b/addDish.html
@@ -117,6 +117,7 @@
                       </div>
                         </div>
                       </form>
+                      <button style="display:none;" id="redirectBtn" class="btn btn-block submitBtn">Cancel</button>
                 </div>
             </div>
             <div class="row mt-3">
